[package]
name = "scrapyard-core"
version = "0.1.0"
authors = ["Petr Hodina <hodinapetr46@gmail.com>"]
build = "build.rs"
description = "Core crate for scrapyard containing MCU, Peripherals, ..."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/phodina/scrapyard-core"
homepage = "https://github.com/phodina/scrapyard-core"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default=[]
cc = ["cbindgen", "libc"]

[build-dependencies]
cbindgen = { version = "0.5.2", optional = true }

[dependencies]
error-chain = "0.11.0"
serde_json = "1.0.13"
serde = "1.0.21"
serde_derive = "1.0.21"
regex = "0.2"
lazy_static = "1.0.0"
libc = {version = "0.2.39",optional = true}
